Created css and styled h's

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h2>👋🏻 Hi I am</h2>
     <h1>Dalete Pokrywiesky</h1>
     <h3>👩🏻‍💻 Front-end developer, based in Portugal 🧭</h3>
-    <div class="contact-link">
-      <a href="about.html">Contact me</a>
+    <div class="buttons-link">
+      <a href="about.html" class="contact-link">Contact me</a>
       <a href="about.html">About me</a>
     </div>
   </body>
