Styled about me page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Dalete Pokrywiesky</h1>
     <h3>👩🏻‍💻 Front-end developer, based in Portugal 🧭</h3>
     <div class="buttons-link">
-      <a href="about.html" class="contact-link">Contact me</a>
-      <a href="about.html">About me</a>
+      <a href="about.html#contact" class="contact-link">Contact me</a>
+      <a href="about.html" class="about-link">About me</a>
     </div>
   </body>
 </html>
