--- a/about.html
+++ b/about.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <a href="index.html">Back to homepage</a>
+    <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
-    <h3>Front-end developer from Brazil, but currently living in Portugal</h3>
+    <h3>
+      🌎 Front-end developer from Brazil , but currently living in Portugal 🌏
+    </h3>
     <div class="about-paragraph">
       <p>About me in Brazil</p>
       <p>About me in Portugal</p>
     </div>
-    <div class="contact-me">
+    <div class="contact">
       <h2>📧 Contact me</h2>
-      <a href="emailto:daletepokry@hotmail.com" class="email-link"
+      <a href="mailto:daletepokry@hotmail.com" class="email-link"
         >daletepokry@hotmail.com</a
       >
     </div>
