Added new infos to paragraph

--- a/about.html
+++ b/about.html
@@ -10,12 +10,29 @@
   <body>
     <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
-    <h3>
-      🌎 Front-end developer from Brazil , but currently living in Portugal 🌏
-    </h3>
+    <h3>🌎 Front-end developer from Lisbon, Portugal 🌏</h3>
     <div class="about-paragraph">
-      <p>About me in Brazil</p>
-      <p>About me in Portugal</p>
+      <p>
+        I am from Brazil, but I am currently living in Portugal. Since little I
+        always dream about living abroad and I fulfill this dream after
+        graduating from college.
+        <br />
+        <br />
+        Living in the United States was an amazing experience, where I could to
+        grown up so much. I made friends that I will take with me, and memories
+        that I cherish forever.
+      </p>
+      <p>
+        After a fews years I though it was time to live a new experience. Moving
+        to Portugal with my family has been amazing, now I can share with them
+        all my new memories.
+        <br />
+        <br />
+        I decided to start from zero, with a new carrer. After some incentive
+        form my cousin, that is a senior developer. I found SheCodes, and
+        through their worshop I learned to have fun coding. I am very excited to
+        explore a career as a Front-end developer.
+      </p>
     </div>
     <div class="contact">
       <h2>📧 Contact me</h2>
