--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         explore a career as a Front-end developer.
       </p>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
       <h2>📧 Contact me</h2>
       <a href="mailto:daletepokry@hotmail.com" class="email-link"
         >daletepokry@hotmail.com</a
